# SendFiles

./: .gitignore  Cargo.toml  PKGBUILD  README.md
assets/: sendfiles.desktop
rqs_lib/: Cargo.toml
rqs_lib/src/hdl/: inbound.rs  outbound.rs
src/: main.rs
